fix: code block text becomes unreadable

--- a/src/components/Milkdown/styles.scss
+++ b/src/components/Milkdown/styles.scss
@@ -151,7 +151,6 @@
           }
 
           code {
-            color: var(--sn-stylekit-contrast-background-color);
             background-color: var(--sn-stylekit-paragraph-text-color);
           }
         }
